# agent_orchestrator

./: .gitignore  ANALISE.md  CLAUDE.md  GUIA.md  HANDOFF-ATUAL.md  HANDOFF.md  README.md  app.py  pyproject.toml
.claude/: settings.json  settings.local.json
api/: agents.py  analyze.py  dispatch.py  folderpicker.py  generate.py  projects.py  usage.py
core/: analyzer.py  builder.py  dispatcher.py  folderpicker.py  launcher.py  usage.py  writer.py
evals/: _force_gen.py  _resultado_A.json  _resultado_C.json  _resultado_big.json  _resultado_mid.json  _write_scaffold.py  cost_arch_subagents.py  cost_monolito_vs_dispatcher.py  cost_quality_1k.py  cost_quality_A.py  cost_quality_mid.py  eval_bigcontext_haiku.py  skill_selection.py
frontend/: generating.html  index.html  preview.html
frontend/static/: app.js  generating.js  preview.js  style.css
templates/agents/: changelog-builder.md  docstring-writer.md  lambda-reviewer.md  readme-generator.md  security-reviewer.md  test-writer.md
templates/hooks/: post-write.sh  pre-bash.sh  stop.sh
templates/skills/: README.md
tests/integration/: test_api.py
tests/unit/: test_analysis_cache.py  test_analyzer.py  test_builder.py  test_claude.py  test_claude_sessions.py  test_dispatcher.py  test_folderpicker.py  test_storage.py  test_usage.py  test_verify.py  test_writer.py
utils/: agents_store.py  analysis_cache.py  claude.py  claude_sessions.py  storage.py  verify.py
